# pretix-passbook

./: .gitlab-ci.yml  .travis.yml  .update-locales  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
passbook/: __init__.py  forms.py  passbook.py  signals.py
passbook/locale/de_Informal/LC_MESSAGES/: django.po
pretix_passbook/: __init__.py  apps.py  forms.py  passbook.py  signals.py  urls.py  views.py
pretix_passbook/locale/: django.pot  djangojs.pot
pretix_passbook/locale/af/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/ar/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/ca/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/cs/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/da/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/de/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/de_Informal/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/el/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/es/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/eu/LC_MESSAGES/: djangojs.po
pretix_passbook/locale/fi/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/fr/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/hr/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/locale/hu/LC_MESSAGES/: djangojs.po
pretix_passbook/locale/it/LC_MESSAGES/: django.po  djangojs.po
pretix_passbook/static/pretix_passbook/: geosuggest.js
pretix_passbook/templates/pretix_passbook/: form.html
(+39 files in other folders)
